src/objects/Directory_Criteria__mdt.object
<CustomObject>
    <description>Criteria that determines who is shown in myAACR directory</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Query_String__c</fullName>
        <label>Query String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Show_Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Filters</label>
        <type>Checkbox</type>
    </fields>
    <label>Directory Criteria</label>
    <listViews>
        <fullName>Detail</fullName>
        <columns>MasterLabel</columns>
        <columns>Is_Active__c</columns>
        <columns>Query__c</columns>
        <columns>Query_String__c</columns>
        <columns>Show_Filters__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detail</label>
    </listViews>
    <pluralLabel>Directory Criteria</pluralLabel>
</CustomObject>